New features: - show add and remove channels and links from in game