@@ -1,10 +1,10 @@
 package it.ax3lt.TabComplete;
 
 import it.ax3lt.Main.StreamAnnouncer;
+import it.ax3lt.TabComplete.Link.RemoveLinkTabComplete;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandSender;
 import org.bukkit.command.TabCompleter;
-import org.bukkit.configuration.ConfigurationSection;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
 
@@ -15,49 +15,45 @@ public class StreamCommandTabHandler implements TabCompleter {
     @Override
     public List<String> onTabComplete(@NotNull CommandSender sender, @NotNull Command command, @NotNull String label, @NotNull String[] args) {
         // /stream reload
-        // /stream add <mcname> <twitchname>
-        // /stream remove <mcname> <twitchname>
-        if (args.length == 1) {
-            return List.of("reload", "add", "remove");
-        }
-        if (args.length == 2 && args[0].equalsIgnoreCase("remove")) {
-            // Get all the players in the config
-            // Config format:
-            // linked_users:
-            //   <mcname>: <twitchname>
+        // /stream
+        // reload
+        // link
+        //      add <mcname> <twitchname>
+        //      remove <mcname> <twitchname>
+        //      list
+        // channels
+        //      add <twitchChannel>
+        //      remove <twitchChannel>
+        //      list
 
-            List<String> players = new ArrayList<>();
-            ConfigurationSection linkedUsers = StreamAnnouncer.getInstance().getConfig().getConfigurationSection("linked_users");
-            if (linkedUsers != null) {
-                for (String key : linkedUsers.getKeys(false)) {
-                    players.add(key);
-                }
-            }
-
-            if (players == null) {
-                return Collections.singletonList("Empty list");
-            }
-            return players;
+        if (args.length == 1) { // /stream
+            return List.of("reload", "link", "channels");
         }
-        if (args.length == 3 && args[0].equalsIgnoreCase("remove")) {
-            // Get all the players in the config
-            // Config format:
-            // linked_users:
-            //   <mcname>: <twitchname>
-            List<String> players = StreamAnnouncer.getInstance().getConfig().getStringList("linked_users." + args[1]);
-
-            if (players == null) {
-                return Collections.singletonList("Empty list");
-            }
-            return players;
+        if (args.length == 2 && args[0].equalsIgnoreCase("link")) { // /stream link
+            return List.of("add", "remove", "list");
         }
-        if(args.length == 2 && args[0].equalsIgnoreCase("add")) {
-            return Collections.singletonList("<mcname>");
-        }
-        if(args.length == 3 && args[0].equalsIgnoreCase("add")) {
-            return Collections.singletonList("<twitchname>");
+        if (args.length == 2 && args[0].equalsIgnoreCase("channels")) { // /stream channels
+            return List.of("add", "remove", "list");
         }
 
+
+        if (args.length >= 3 && args[0].equalsIgnoreCase("link") && args[1].equalsIgnoreCase("add")) { // /stream link add
+            if(args.length == 3)
+                return List.of("<mcname>");
+            if(args.length == 4)
+                return List.of("<twitchname>");
+        }
+        if (args.length >= 3 && args[0].equalsIgnoreCase("link") && args[1].equalsIgnoreCase("remove")) {
+            return new RemoveLinkTabComplete().onTabComplete(sender, command, label, args);
+        }
+
+
+        if (args.length == 3 && args[0].equalsIgnoreCase("channels") && args[1].equalsIgnoreCase("add")) { // /stream channels add
+            return List.of("<twitchChannel>");
+        }
+        if (args.length == 3 && args[0].equalsIgnoreCase("channels") && args[1].equalsIgnoreCase("remove")) { // /stream channels remove (list of channels)
+            return StreamAnnouncer.getInstance().getConfig().getStringList("channels");
+        }
 
         return null;
     }
